--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Adam Reid</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <script src="https://use.fontawesome.com/f689b57ccd.js"></script>
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
