--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <p></p>
         <ul class="contact">
           <li class="fa-envelope"><a href="#">adam@adam-reid.com</a></li>
-          <li class="fa-linkedin"><a href="https://linkedin.com/arr213">linkedin.com/arr213</a></li>
+          <li class="fa-linkedin"><a href="https://linkedin.com/in/arr213">linkedin.com/in/arr213</a></li>
           <li class="fa-github"><a href="https://github.com/arr213">github.com/arr213</a></li>
           <li class="fa-phone">(914) 843-8841</li>
           <li class="fa-facebook"><a href="https://www.facebook.com/adam.r.reid">facebook.com/adam.r.reid</a></li>
